# meclib

./: .gitignore  LICENSE.md  README.md  pyproject.toml
additional files/: Peaks_in_2040_default.pkl  PyPI instructions.docx
examples/: CambioComparisons.ipynb  CambioComparisons.py  MakeEmissionScenario.ipynb  MakeEmissionScenario.py  test.py
examples of .ipynb modules/: CambioComparisons.ipynb  MakeEmissionScenario.ipynb
examples of .ipynb modules (15-week course, student versions)/release (August 2025)/Week_01a.IntroToPython/: IntroToPython.ipynb
examples of .ipynb modules (15-week course, student versions)/release (August 2025)/Week_02a.IfAndWhile/: IfAndWhile.ipynb
examples of .ipynb modules (15-week course, student versions)/release (August 2025)/Week_02b.ForLoops/: ForLoops.ipynb
examples of .ipynb modules (15-week course, student versions)/release (August 2025)/Week_03a.ConcentrationAndFlux/: ConcentrationAndFlux.ipynb
examples of .ipynb modules (15-week course, student versions)/release (August 2025)/Week_05a.ScheduledFlows/: ScheduledFlows.ipynb
examples of .py modules/: MakeEmissionScenario.py  Peaks_in_2040_LTE.pkl
examples_of_python_notebooks/: CO2_1832_1978.txt  CO2_1958_2024.txt  CambioComparisons.ipynb  Figures_and_parameters.ipynb  RCP4_5.pkl
examples_of_python_notebooks/Figures_and_parameters/: CO2_1850_1957.txt
examples_of_python_scripts/: CambioComparisons.py  Peaks_in_2040.pkl
meclib/: __init__.py  cl.py
meclib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+14 files in other folders)
