[project]
name = "meclib"
version = "0.1.1"
description = "Code for Modeling Earth's Climate course"
authors = [{ name = "Steven Neshyba", email = "sneshyba@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ['numpy', 'matplotlib', 'pandas', 'pint']

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]